--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,9 @@
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "./node_modules/bootstrap/dist/css/bootstrap.css",
-              "projects/user/src/styles.scss"
+              "projects/user/src/styles.scss",
+              "node_modules/ngx-toastr/toastr.css" 
+
             ],
             "scripts": [
               "./node_modules/bootstrap/dist/js/bootstrap.min.js"
@@ -103,7 +105,9 @@
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "./node_modules/bootstrap/dist/css/bootstrap.css",
-              "projects/user/src/styles.scss"
+              "projects/user/src/styles.scss",
+              "node_modules/ngx-toastr/toastr.css",
+              "node_modules/ngx-spinner/animations/line-spin-fade.css"
             ],
             "scripts": [
               "./node_modules/bootstrap/dist/js/bootstrap.min.js"
@@ -140,7 +144,10 @@
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "./node_modules/bootstrap/dist/css/bootstrap.css",
-              "projects/admin/src/styles.scss"
+              "projects/admin/src/styles.scss",
+              "node_modules/ngx-toastr/toastr.css" ,
+              "node_modules/ngx-spinner/animations/line-spin-fade.css"
+
             ],
             "scripts": [
               "./node_modules/bootstrap/dist/js/bootstrap.min.js"
@@ -213,7 +220,9 @@
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "./node_modules/bootstrap/dist/css/bootstrap.css",
-              "projects/admin/src/styles.scss"
+              "projects/admin/src/styles.scss",
+              "node_modules/ngx-toastr/toastr.css" ,
+              "node_modules/ngx-spinner/animations/line-spin-fade.css"
             ],
             "scripts": [
               "./node_modules/bootstrap/dist/js/bootstrap.min.js"
